[zircon][x86] Implement shadow page tables [2/3]
1. Merge remaining parts of mmu.cpp change that were skipped in d15ce06d
2. Extract KPTI constants into a private header; we don't need or want to
   make the x86 aspace code depend on lib/code_patching publically.
3. Minor build fixes
4. Switch X86PageTableBase::Init() -> virtual; we expect each type of page
   table implementation to override it.
5. Disable multi-page page table allocation; we are going to replace it,
   as contiguous allocations at runtime are disfavored.

ZX-1528 #comment Implement PML4 shadowing and swapping
ZX-1526 Meltdown mitigations

Tested:
* Builds, but does not boot (as expected)

--- a/zircon/kernel/arch/x86/BUILD.gn
+++ b/zircon/kernel/arch/x86/BUILD.gn
@@ -152,6 +152,7 @@ library("x86") {
 
     # <arch/x86/apic.h> has #include <dev/interrupt.h>.
     "$zx/kernel/dev/interrupt:headers",
+    "$zx/kernel/lib/code_patching",
   ]
 }
 
@@ -161,6 +162,7 @@ source_set("syscall") {
   ]
   deps = [
     "$zx/kernel/syscalls:syscall-abi",
+    "$zx/kernel/lib/code_patching",
   ]
 }
 
