--- a/zircon/system/dev/ethernet/asix-88179/BUILD.gn
+++ b/zircon/system/dev/ethernet/asix-88179/BUILD.gn
@@ -4,18 +4,43 @@
 
 driver("asix-88179") {
   sources = [
-    "asix-88179.c",
+    "asix-88179.cpp",
   ]
   deps = [
+    "$zx/system/banjo/ddk.protocol.clock",
+    "$zx/system/banjo/ddk.protocol.composite",
     "$zx/system/banjo/ddk.protocol.ethernet",
+    "$zx/system/banjo/ddk.protocol.ethernet.board",
+    "$zx/system/banjo/ddk.protocol.gpio",
+    "$zx/system/banjo/ddk.protocol.i2c",
+    "$zx/system/banjo/ddk.protocol.platform.device",
     "$zx/system/banjo/ddk.protocol.usb",
     "$zx/system/banjo/ddk.protocol.usb.composite",
     "$zx/system/banjo/ddk.protocol.usb.request",
+
+    "$zx/system/dev/lib/amlogic",
+    "$zx/system/dev/lib/device-protocol-i2c-channel",
+    "$zx/system/dev/lib/device-protocol-pdev",
+    "$zx/system/dev/lib/device-protocol-platform-device",
+    "$zx/system/dev/lib/mmio",
     "$zx/system/dev/lib/usb",
     "$zx/system/ulib/ddk",
-    "$zx/system/ulib/pretty",
+    "$zx/system/ulib/ddktl",
+    "$zx/system/ulib/fbl",
     "$zx/system/ulib/sync",
     "$zx/system/ulib/zircon",
-    "$zx/third_party/ulib/cksum",
+    "$zx/system/ulib/zx",
+
+        "$zx/system/banjo/ddk.protocol.ethernet",
+        "$zx/system/banjo/ddk.protocol.usb",
+        "$zx/system/banjo/ddk.protocol.usb.composite",
+        "$zx/system/banjo/ddk.protocol.usb.request",
+        "$zx/system/dev/lib/usb",
+        "$zx/system/ulib/ddk",
+        "$zx/system/ulib/pretty",
+        "$zx/system/ulib/sync",
+        "$zx/system/ulib/zircon",
+        "$zx/third_party/ulib/cksum",
+
   ]
 }
