--- a/zircon/system/dev/ethernet/asix-88179/BUILD.gn
+++ b/zircon/system/dev/ethernet/asix-88179/BUILD.gn
@@ -11,6 +11,7 @@ driver("asix-88179") {
     "$zx/system/banjo/ddk.protocol.composite",
     "$zx/system/banjo/ddk.protocol.ethernet",
     "$zx/system/banjo/ddk.protocol.ethernet.board",
+    "$zx/system/banjo/ddk.protocol.ethernet.mac",
     "$zx/system/banjo/ddk.protocol.gpio",
     "$zx/system/banjo/ddk.protocol.i2c",
     "$zx/system/banjo/ddk.protocol.platform.device",
