--- a/zircon/system/dev/ethernet/asix-88179/BUILD.gn
+++ b/zircon/system/dev/ethernet/asix-88179/BUILD.gn
@@ -4,7 +4,7 @@
 
 driver("asix-88179") {
   sources = [
-    "asix-88179.cpp",
+    "asix-88179.cc",
   ]
   deps = [
     "$zx/system/banjo/ddk.protocol.clock",
