[WIP] [corium] add component
The component is really just a copy of component_test_runner at this
commit.

Change-Id: I5fc8d58605368bef6e34bdb0fdc90a5ccabda774

--- a/products/core.gni
+++ b/products/core.gni
@@ -27,6 +27,7 @@ base_package_labels += [
   "//src/developer/bugreport",
   "//src/recovery/factory_reset",
   "//src/sys/netclock:netclock",
+  "//src/sys/wasm_runner:wasm_runner",
 ]
 
 cache_package_labels += []
